--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /part-2/part-2-3/exercise-2-8/database/
 /part-2/part-2-3/exercise-2-9/database/
 /part-2/part-2-3/exercise-2-10/database/
+/part-3/part-3-3/exercise-3-5/database/
