exercise-3-6 edited multiline commands

--- a/part-3/part-3-4/exercise-3-6/frontend/Dockerfile
+++ b/part-3/part-3-4/exercise-3-6/frontend/Dockerfile
@@ -6,11 +6,11 @@ COPY ./example-frontend .
 
 EXPOSE 5000
 
-RUN npm install \
-    && REACT_APP_BACKEND_URL=http://127.0.0.1:80/api npm run build \
-    && npm install -g serve \
-    && groupadd appuser && useradd -m appuser -g appuser \
-    && chown appuser .
+RUN npm install && \
+    REACT_APP_BACKEND_URL=http://127.0.0.1:80/api npm run build && \
+    npm install -g serve && \
+    groupadd appuser && useradd -m appuser -g appuser && \
+    chown appuser .
 
 # now we can change the user
 USER appuser
