--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@
 /part-2/part-2-3/exercise-2-10/database/
 /part-3/part-3-3/exercise-3-5/database/
 /part-3/part-3-4/exercise-3-6/database/
-
+/part-3/part-3-4/exercise-3-7/database/
