--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /part-3/part-3-3/exercise-3-5/database/
 /part-3/part-3-4/exercise-3-6/database/
 /part-3/part-3-4/exercise-3-7/database/
+/part-3/part-3-4/exercise-3-9/database/
+
